# FAIRS-Roulette-Player

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup_and_maintenance.bat  start_on_windows.bat  verify_changes.py  verify_checkpoint_delete.py
.agent/: BACKGROUND_JOBS.md
.agent/rules/: GENERAL_RULES.md  GUIDELINES_PYTHON.md  GUIDELINES_TESTS.md  GUIDELINES_TYPESCRIPT.md  PACKAGING_AND_RUNTIME_MODES.md
.github/workflows/: ci.yml
FAIRS/: setup_and_maintenance.bat  start_on_windows.bat
FAIRS/client/: index.html  package-lock.json  package.json  vite.config.ts
FAIRS/client/public/: copy_icon.bat  node_copy_log.txt  pull_icon.cjs  pull_icon.py
FAIRS/client/src/: App.tsx
FAIRS/client/src-tauri/: Cargo.toml  tauri.conf.json
FAIRS/resources/templates/: .env
FAIRS/scripts/: initialize_database.py
FAIRS/server/: __init__.py  app.py
FAIRS/server/api/: __init__.py  database.py  inference.py  training.py  upload.py
FAIRS/server/common/: api_errors.py  checkpoints.py  constants.py
FAIRS/server/configurations/: __init__.py  base.py  bootstrap.py  dependencies.py  management.py  server.py  settings.py  startup.py
FAIRS/server/database/: database.py  initializer.py  postgres.py  schema.py  sqlite.py
FAIRS/server/domain/: configuration.py  inference.py  jobs.py  training.py  upload.py
FAIRS/server/entities/: __init__.py  inference.py  training.py
FAIRS/server/repositories/: database.py  initializer.py  postgres.py  schema.py  serializer.py  sqlite.py
FAIRS/server/routes/: __init__.py  database.py  (+4 more)
FAIRS/settings/: .env  .env.cloud.example  .env.example  .env.local.example  .env.local.tauri.example  configurations.json  server_configurations.json
app/client/: vite.config.ts
app/scripts/: initialize_database.py
app/server/: app.py  pyproject.toml
app/shared/: openapi.json
app/tests/: conftest.py  test_config.json
assets/docs/: ARCHITECTURE.md  BACKGROUND_JOBS.md  CODING_RULES.md  GENERAL_RULES.md  GUIDELINES_PYTHON.md  GUIDELINES_TESTS.md  GUIDELINES_TYPESCRIPT.md  PACKAGING_AND_RUNTIME_MODES.md  PROJECT_OVERVIEW.md  README_WRITING.md  RUNTIME_MODES.md  UI_STANDARDS.md  USER_MANUAL.md
docker/: backend.Dockerfile  frontend.Dockerfile
release/tauri/: build_with_tauri.bat
settings/: .env  .env.example  configurations.json
tests/: conftest.py  manual_migration_check.py  run_tests.bat
tests/e2e/: test_app_flow.py  test_data_removal_api.py  test_database_api.py  test_inference_api.py  test_training_api.py  test_upload_api.py  test_websocket.py
tests/unit/: test_checkpoint_service.py  test_data_serializer.py  test_database_config_json.py  test_database_mode_env_override.py  test_dataset_service.py  test_fallback.py  test_inference_service.py  test_runtime_env_loading.py  test_security_hardening.py  test_settings_system.py  test_sqlite_repository_orm.py  test_training_service.py  testhold.py  testsizer.py
(+219 files in other folders)
