[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "FAIRS"
version = "2.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "tqdm==4.67.1",    
    "torch==2.9.0+cu130",    
    "keras==3.12.0",    
    "SQLAlchemy==2.0.43",
    "psycopg[binary]==3.3.1",
    "python-multipart>=0.0.21",
    "python-dotenv==1.1.0",
    "triton-windows==3.5.1.post22",    
    "gymnasium==1.2.2",    
    "openpyxl==3.1.5",
    "pillow==12.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["FAIRS"] 

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
# torchvision = { index = "pytorch-cu130" }
# torchaudio  = { index = "pytorch-cu130" }
