[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "FAIRS"
version = "2.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "tqdm==4.67.1",    
    "torch==2.9.0+cu130",    
    "keras==3.13.1",    
    "SQLAlchemy==2.0.46",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1", 
    "python-multipart>=0.0.21", 
    "gymnasium==1.2.2",    
    "openpyxl==3.1.5",
    "pillow==12.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["FAIRS"] 

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true 

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
# torchvision = { index = "pytorch-cu130" }
# torchaudio  = { index = "pytorch-cu130" }
